# staff-hub

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  README.md  StaffHub.sln  _config.yaml  index.html  index.md  mkdocs.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-github-pages.yaml  build-mkdocs.yaml  build-solution.yaml  deploy-mkdocs.yaml
docs/: SETUP.md  index.md  writing-your-docs.md
docs/assets/: Diagram.drawio
docs/scripts/: README.md
docs/src/: classes.md  functionality.md
docs/workflows/: README.md  debugging-ci.md
precommit/: index.html
precommit/precommit/: index.html
scripts/: README.md  export_requirements_txt.py  index.html
scripts/scripts/: index.html
search/: search_index.json
src/: README.md  index.html
src/Domain/: Domain.csproj
src/Domain/Models/: Configuration.cs  DaysTally.cs  HubConfigurationEntry.cs  Leave.cs  PublicHoliday.cs  Team.cs  User.cs
src/Persistence/: Persistence.csproj
src/Persistence/Contexts/: ApplicationDbContext.cs  (+1 more)
src/Services/: ApplicationUserManager.cs  CalendarFetchService.cs  CalendarSyncher.cs  CronJobService.cs  CustomEmailSender.cs  EmailSender.cs  SD.cs  Services.csproj  SmtpEmailSender.cs
src/StaffHub/: Program.cs  StaffHub.csproj  StaffHub.sln  appsettings.Development.json  appsettings.json
src/classes/: index.html
src/functionality/: index.html
src/src/: index.html
workflows/: index.html
workflows/debugging-ci/: index.html
workflows/workflows/: index.html
writing-your-docs/: index.html
(+105 files in other folders)
